<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@android:color/holo_purple"
        android:text="@string/screen_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_notification_title"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/noti_title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_notification_desc"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/noti_desc_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit_small_noti_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fire_small_notification"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/submit_big_noti_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fire_big_notification"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/submit_group_noti_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fire_group_notification"
        android:layout_margin="10dp"/>

</LinearLayout>
